Bug 86750 - FILEOPEN: RTF import breaks Table of Contents links
Summary: FILEOPEN: RTF import breaks Table of Contents links
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.7.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 tar...
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-11-26 19:31 UTC by Luke
Modified: 2015-12-17 12:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample RTF created in Word 2013 (58.27 KB, application/rtf)
2014-11-26 19:31 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2014-11-26 19:31:19 UTC
Created attachment 110084 [details]
Sample RTF created in Word 2013

When you open a RTF file with Writer, and try to follow a link with a Ctrl-click, you get the following error:

"HYPERLINK#_Toc" is not an absolute URL that can be passed to an external application to open it.

Steps to reproduce:
1. Open ToC.rtf
2. Ctrl-click any chapter

When I tested with OpenOffice 4.2, I had no problem navigating chapters with Ctrl-click in the TOC.
Comment 1 A (Andy) 2014-11-26 20:57:39 UTC
Reproducible with LO 4.3.4.1, Win 8.1.
Comment 2 Luke 2014-11-27 01:30:11 UTC
Adding Miklos since Version: 4.1.6.2 has no problem importing and following links in RTF files with ToC.
Comment 3 Miklos Vajna 2014-12-07 20:40:33 UTC
Yes, this is a problem since we no longer ignore hand-edited table of contents from RTF. I'll fix this.
Comment 4 Commit Notification 2014-12-08 08:18:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4517c94000153eab6c034ea548698953dd93f794

fdo#86750 RTF import: fix table of contents links

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-12-08 09:56:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b16cf0f554680adadef19dfdf82c52243313e03&h=libreoffice-4-4

fdo#86750 RTF import: fix table of contents links

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-12-08 11:26:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3a2a74a48405d6d3423c06f9752c2254684d7770&h=libreoffice-4-3

fdo#86750 RTF import: fix table of contents links

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 12:54:19 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Remove redundant rtf_filter.
[NinjaEdit]