fdo#86750 RTF import: fix table of contents links

Change-Id: I0f3d35a0e64c9ce5646fa63eda317bee42de5540